# pennylane-lightning-gpu

./: .coveragerc  .gitignore  .readthedocs.yml  CMakeLists.txt  MANIFEST.in  Makefile  README.rst  requirements.txt  setup.cfg  setup.py  test_script.sh
.github/: CHANGELOG.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md
.github/workflows/: build_wheel_manylinux2014.yml  changelog_reminder.yml  compat-check-latest-latest.yml  compat-check-latest-stable.yml  compat-check-stable-latest.yml  compat-check-stable-stable.yml  dev_version_script.py  format.yml  set_wheel_build_matrix.yml  test_gpu_runner.yml  tests_linux_x86.yml  tests_linux_x86_mpich.yml  tests_linux_x86_openmpi.yml  update_dev_version.yml
doc/: conf.py  devices.rst  index.rst  requirements.txt
doc/code/: __init__.rst
doc/xanadu_theme/: header.html
docker/: Dockerfile  README.md  auditwheel
mpitests/: conftest.py  test_adjoint_jacobian.py  test_apply.py
pennylane_lightning_gpu/: __init__.py  _serialize.py  _version.py  lightning_gpu.py  lightning_gpu_torch.py  module_bindings.py
pennylane_lightning_gpu/src/: CMakeLists.txt
pennylane_lightning_gpu/src/algorithms/: AdjointDataGPU.hpp  AdjointDiffGPU.cpp  AdjointDiffGPU.hpp  AdjointDiffGPUMPI.cpp  AdjointDiffGPUMPI.hpp  CMakeLists.txt  GateGenerators.hpp  GateGeneratorsMPI.hpp  ObsDatum.hpp  ObservablesGPU.hpp  ObservablesGPUMPI.hpp  cuOpsData.hpp
pennylane_lightning_gpu/src/bindings/: Bindings.cpp
pennylane_lightning_gpu/src/interfaces/: CMakeLists.txt
pennylane_lightning_gpu/src/interfaces/torch/: CMakeLists.txt  LightningGPU_Torch.cpp
pennylane_lightning_gpu/src/simulator/: CMakeLists.txt  Constant.hpp  MPIWorker.hpp  Measurements.hpp  StateVectorCudaBase.hpp  StateVectorCudaMPI.cpp  StateVectorCudaMPI.hpp  StateVectorCudaManaged.cpp  StateVectorCudaManaged.hpp  StateVectorCudaRaw.cpp  StateVectorCudaRaw.hpp  cuConstant.hpp  cuGateCache.cpp  cuGateCache.hpp  cuGates_host.hpp  cuGates_param.hpp  init.cu  initSV.cu  mpiWorker.hpp
pennylane_lightning_gpu/src/simulator/interfaces/: CMakeLists.txt
pennylane_lightning_gpu/src/simulator/interfaces/torch/: Bindings.cpp  CMakeLists.txt  SVCudaTorch.cpp  SVCudaTorch.hpp
pennylane_lightning_gpu/src/tests/: CMakeLists.txt  TestHelpers.hpp  TestHelpersLGPU.hpp  Test_AdjointDiffGPU.cpp  Test_DataBuffer.cpp  Test_DataBufferArena.cpp  Test_GateCache.cpp  Test_Generators.cpp  Test_ObservablesGPU.cpp  Test_StateVectorCudaManaged_NonParam.cpp  Test_StateVectorCudaManaged_Param.cpp  Test_StateVectorCudaRaw_NonParam.cpp  Test_StateVectorCudaRaw_Param.cpp
pennylane_lightning_gpu/src/tests/mpi/: Test_MPIManager.cpp  Test_MPI_AdjointDiffGPU.cpp  Test_MPI_StateVectorCudaManaged_NonParam.cpp  Test_MPI_StateVectorCudaManaged_Param.cpp  Test_StateVectorCudaMPI_NonParam.cpp  Test_StateVectorCudaMPI_Param.cpp
pennylane_lightning_gpu/src/util/: CMakeLists.txt  CSRMatrix.hpp  DataBuffer.cu  DataBuffer.hpp  DataBufferArena.hpp  DevID.hpp  DevTag.hpp  DevicePool.hpp  MPIManager.hpp  cuda_helpers.hpp  mpi_helpers.hpp
test/: test_apply.py
tests/: conftest.py  test_adjoint_jacobian.py  test_apply.py  test_comparison.py  test_execute.py  test_expval.py  test_gates.py  test_hamiltonian.py  test_hamiltonian_sparse.py  test_probs.py  test_properties.py  test_sample.py  test_var.py  test_vjp.py
tests/mpitests/: conftest.py  test_apply.py
tests/utilities/: README.md  sv_transfers.cu
